--- a/PlooAPI/PlooAPI/PlooAPI.csproj
+++ b/PlooAPI/PlooAPI/PlooAPI.csproj
@@ -8,14 +8,37 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dapper" Version="2.1.28" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Business\" />
-      <Folder Include="Controllers\" />
-      <Folder Include="Repository\" />
+      <Compile Remove="Repositories.cs" />
+      <Compile Remove="Repository\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Repository\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Repository\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Repository\**" />
     </ItemGroup>
 
 </Project>
