EF Core configuration + Entidades

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,41 @@ PlooAPI/PlooAPI/obj/PlooAPI.csproj.nuget.g.props
 PlooAPI/PlooAPI/obj/PlooAPI.csproj.nuget.g.targets
 
 PlooAPI/PlooAPI/obj/project.assets.json
+
+*.dll
+
+PlooAPI/PlooAPI/bin/Debug/net8.0/PlooAPI.deps.json
+
+PlooAPI/PlooAPI/bin/Debug/net8.0/PlooAPI.exe
+
+PlooAPI/PlooAPI/bin/Debug/net8.0/PlooAPI.pdb
+
+PlooAPI/PlooAPI/bin/Debug/net8.0/PlooAPI.runtimeconfig.json
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.csproj.CopyComplete
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.csproj.CoreCompileInputs.cache
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.csproj.FileListAbsolute.txt
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.genruntimeconfig.cache
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.MvcApplicationPartsAssemblyInfo.cache
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.MvcApplicationPartsAssemblyInfo.cs
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.pdb
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/PlooAPI.sourcelink.json
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/staticwebassets.build.json
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/staticwebassets/msbuild.build.PlooAPI.props
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.PlooAPI.props
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.PlooAPI.props
+
+PlooAPI/PlooAPI/obj/PlooAPI.csproj.EntityFrameworkCore.targets
+
+PlooAPI/PlooAPI/obj/Debug/net8.0/apphost.exe
