Post e Patch Perfil

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,19 @@ PlooAPI/PlooAPI/obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.PlooAPI
 PlooAPI/PlooAPI/obj/PlooAPI.csproj.EntityFrameworkCore.targets
 
 PlooAPI/PlooAPI/obj/Debug/net8.0/apphost.exe
+
+PlooAPI/.vs/PlooAPI/FileContentIndex/654ea2b9-5820-40ef-8a3c-088060c9d675.vsidx
+
+PlooAPI/.vs/PlooAPI/FileContentIndex/read.lock
+
+PlooAPI/.vs/PlooAPI/v17/.futdcache.v2
+
+PlooAPI/.vs/PlooAPI/v17/.suo
+
+PlooAPI/.vs/ProjectEvaluation/plooapi.metadata.v6.1
+
+PlooAPI/.vs/ProjectEvaluation/plooapi.projects.v6.1
+
+PlooAPI/PlooAPI/obj/rider.project.model.nuget.info
+
+PlooAPI/PlooAPI/PlooAPI.csproj.user
