--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,13 @@ PlooAPI/.vs/ProjectEvaluation/plooapi.projects.v6.1
 PlooAPI/PlooAPI/obj/rider.project.model.nuget.info
 
 PlooAPI/PlooAPI/PlooAPI.csproj.user
+
+PlooAPI/.vs/PlooAPI/config/applicationhost.config
+
+PlooAPI/.vs/PlooAPI/DesignTimeBuild/.dtbcache.v2
+
+PlooAPI/.vs/PlooAPI/FileContentIndex/b68fb657-736b-4c93-bc46-29105e56e489.vsidx
+
+PlooAPI/.vs/ProjectEvaluation/plooapi.metadata.v7.bin
+
+PlooAPI/.vs/ProjectEvaluation/plooapi.projects.v7.bin
