--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@ PlooAPI/.vs/PlooAPI/FileContentIndex/b68fb657-736b-4c93-bc46-29105e56e489.vsidx
 PlooAPI/.vs/ProjectEvaluation/plooapi.metadata.v7.bin
 
 PlooAPI/.vs/ProjectEvaluation/plooapi.projects.v7.bin
+
+PlooAPI/global.json
