--- a/PlooAPI/PlooAPI/PlooAPI.csproj
+++ b/PlooAPI/PlooAPI/PlooAPI.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="AutoMapper" Version="12.0.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Dapper" Version="2.1.28" />
+        <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
