Alterando estrutura geral -> Projeto finalizado

--- a/PlooAPI/PlooAPI/PlooAPI.csproj
+++ b/PlooAPI/PlooAPI/PlooAPI.csproj
@@ -31,6 +31,8 @@
       <Compile Remove="Repositories.cs" />
       <Compile Remove="Repository\**" />
       <Compile Remove="Models\Entity.cs" />
+      <Compile Remove="Models\EquipeUsuario.cs" />
+      <Compile Remove="Controllers\EquipeController.cs" />
     </ItemGroup>
 
     <ItemGroup>
